# k8s-getting-started

./: README.md  mise.toml
deployment/: README.md  deployment.yaml  pod.yaml  with-config.yaml  with-secret.yaml
microservice/: .mise.toml  Dockerfile  Makefile  README.md  pyproject.toml
microservice/microservice/: __init__.py  microservice.py  test.py  test_microservice.py
microservice/microservice/data/: secrets.txt
