[tool.poetry]
name = "microservice"
version = "0.1.0"
description = "Just a toy microservice"
authors = ["Rafal Skolasinski <r.j.skolasinski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
humanize = "^4.11.0"
datetime = "^5.5"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
